2_database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: namespace1
  labels:
    app: database
spec:
  ports:
  - port: 1433
    name: database
  selector:
    app: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: database1
  replicas: 1
  selector:
    matchLabels:
      app: database1
  template:
    metadata:
      labels:
        app: database1
    spec:
      containers:
      - name: database
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: data
          mountPath: /var/opt/mssql/data
        - name: log
          mountPath: /var/opt/mssql/log
        - name: secrets
          mountPath: /var/opt/mssql/secrets
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: <appropriate storageclass> # that supports block storage
      volumeMode: Block # for speed 
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: <size>
  - metadata:
      name: log
    spec:
      storageClassName: <appropriate storageclass>
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: <size>
  - metadata:
      name: secrets
    spec:
      storageClassName: <appropriate storageclass>
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: <size>
